--- a/src/app/components/user/confirm-assessment/confirm-assessment.component.html
+++ b/src/app/components/user/confirm-assessment/confirm-assessment.component.html
@@ -1,9 +1,9 @@
 <div class="w-96 p-3">
   <div class="mb-5 flex flex-col justify-center items-center gap-3">
-    <h3 class="font-semibold text-lg">Title</h3>
+    <h3 class="font-semibold text-lg">{{ data.title }}</h3>
     <div>
-      <h3>Time : 240 minute</h3>
-      <h3>Attempt : 2</h3>
+      <h3>Time : {{ data.time }} minute</h3>
+      <h3>Attempt : {{ data.attempt }} times</h3>
     </div>
   </div>
   <div class="flex items-center gap-3 w-full">
